syntax = "proto3";

// If you make any changes make sure you run: make regenerate-proto

package gitlab.agent.redistool;

option go_package = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/v16/internal/tool/redistool";

message ExpiringValue {
  // When the value should be considered expired. Number of seconds since UNIX epoch.
  int64 expires_at = 1;
  bytes value = 2;
}

// ExpiringValueTimestamp has the timestamp only. Can be used to skip unmarshaling the payload.
message ExpiringValueTimestamp {
  // When the value should be considered expired. Number of seconds since UNIX epoch.
  int64 expires_at = 1;
}
